--- a/MiniProject/quiz/index.html
+++ b/MiniProject/quiz/index.html
@@ -17,6 +17,7 @@
 
 <body dir="rtl">
     <!-- swiper slider with Questions-->
+    <h1>فقط روی حالت دسکتاپ می توان سوالات را از روی نقشه انتخاب کنید! </h1>
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
             <div class="swiper-slide ">
