--- a/MiniProject/quiz/index.html
+++ b/MiniProject/quiz/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fa" >
+<html lang="fa">
 
 <head>
     <!-- Required meta tags -->
@@ -14,11 +14,9 @@
     <link rel="stylesheet" type="text/css" href="../css/landing.css">
 
 </head>
-
 <body dir="rtl">
-    <!-- for checking device to start Quiz-->
     <h1 id="alert" class="has-text-centered"></h1>
-   <div id="detect">
+    <div id="detect">
     <!-- swiper slider with Questions-->
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
@@ -42,6 +40,7 @@
                             shape="circle">
                         <area class="country" alt="Finland-Country" title="Finland" href="#!"
                             coords="513,305,449,321,451,456,518,455" shape="poly">
+                        <area target="" alt="iran" title="iran" href="#!iran" coords="738,777,50" shape="circle">
                     </map>
                 </div>
             </div>
@@ -65,6 +64,8 @@
                             shape="circle">
                         <area class="country" alt="Finland-Country" title="Finland" href="#!"
                             coords="513,305,449,321,451,456,518,455" shape="poly">
+                        <area target="" alt="iran" title="iran" href="#!iran" coords="738,777,50" shape="circle">
+
                     </map>
                 </div>
             </div>
@@ -88,6 +89,8 @@
                             shape="circle">
                         <area class="country" alt="Finland-Country" title="Finland" href="#!"
                             coords="513,305,449,321,451,456,518,455" shape="poly">
+                        <area target="" alt="iran" title="iran" href="#!iran" coords="738,777,50" shape="circle">
+
                     </map>
                 </div>
             </div>
@@ -112,6 +115,8 @@
                             shape="circle">
                         <area class="country" alt="Finland-Country" title="Finland" href="#!"
                             coords="513,305,449,321,451,456,518,455" shape="poly">
+                        <area target="" alt="iran" title="iran" href="#!iran" coords="738,777,50" shape="circle">
+
                     </map>
                 </div>
             </div>
@@ -136,6 +141,8 @@
                             shape="circle">
                         <area class="country" alt="Finland-Country" title="Finland" href="#!"
                             coords="513,305,449,321,451,456,518,455" shape="poly">
+                        <area target="" alt="iran" title="iran" href="#!iran" coords="738,777,50" shape="circle">
+
                     </map>
                 </div>
             </div>
@@ -153,8 +160,8 @@
         </div>
         <div class="swiper-pagination"></div>
     </div>
-    </div>
-<!-- loading js files-->
+</div>
+    <!-- loading js files-->
     <script async type="text/javascript" src="../js/template.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.17/dist/sweetalert2.all.min.js"></script>
@@ -167,4 +174,6 @@
         }
     </script>
 </body>
+
 </html>
+
