--- a/MiniProject/quiz/index.html
+++ b/MiniProject/quiz/index.html
@@ -40,7 +40,7 @@
                             shape="circle">
                         <area class="country" alt="Finland-Country" title="Finland" href="#!"
                             coords="513,305,449,321,451,456,518,455" shape="poly">
-                        <area target="" alt="iran" title="iran" href="#!iran" coords="738,777,50" shape="circle">
+                        <area class="country" alt="iran" title="iran" href="#!iran" coords="738,777,50" shape="circle">
                     </map>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                             shape="circle">
                         <area class="country" alt="Finland-Country" title="Finland" href="#!"
                             coords="513,305,449,321,451,456,518,455" shape="poly">
-                        <area target="" alt="iran" title="iran" href="#!iran" coords="738,777,50" shape="circle">
+                        <area class="country" alt="iran" title="iran" href="#!iran" coords="738,777,50" shape="circle">
 
                     </map>
                 </div>
@@ -89,7 +89,7 @@
                             shape="circle">
                         <area class="country" alt="Finland-Country" title="Finland" href="#!"
                             coords="513,305,449,321,451,456,518,455" shape="poly">
-                        <area target="" alt="iran" title="iran" href="#!iran" coords="738,777,50" shape="circle">
+                        <area class="country" alt="iran" title="iran" href="#!iran" coords="738,777,50" shape="circle">
 
                     </map>
                 </div>
@@ -115,7 +115,7 @@
                             shape="circle">
                         <area class="country" alt="Finland-Country" title="Finland" href="#!"
                             coords="513,305,449,321,451,456,518,455" shape="poly">
-                        <area target="" alt="iran" title="iran" href="#!iran" coords="738,777,50" shape="circle">
+                        <area class="country" alt="iran" title="iran" href="#!iran" coords="738,777,50" shape="circle">
 
                     </map>
                 </div>
@@ -141,7 +141,7 @@
                             shape="circle">
                         <area class="country" alt="Finland-Country" title="Finland" href="#!"
                             coords="513,305,449,321,451,456,518,455" shape="poly">
-                        <area target="" alt="iran" title="iran" href="#!iran" coords="738,777,50" shape="circle">
+                        <area class="country" alt="iran" title="iran" href="#!iran" coords="738,777,50" shape="circle">
 
                     </map>
                 </div>
@@ -176,4 +176,3 @@
 </body>
 
 </html>
-
