--- a/index.html
+++ b/index.html
@@ -25,11 +25,6 @@
                         <a class="navbar-item" href="#!Logo">
                             <img src="./MiniProject/img/New-Design-Logo.png" alt="Logo">
                         </a>
-                        <span class="navbar-burger burger" data-target="navbarMenu">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </span>
                     </div>
                 </div>
             </nav>
@@ -46,34 +41,54 @@
                         جواب سوالات پرسیده شده را در لینک زیر پیدا کنید:
                     </h2>
                 </div>
-                    <div class="column is-6 is-offset-3">
-
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title">
-                                    جواب سوال اول
-                                </p>
-                                <button class="card-header-icon" aria-label="more options">
-                                    <span class="icon is-medium">
-                                        <a href="./Question1/index.html" alt="quiz">
-                                            <i class="fa fa-angle-left has-text-info" aria-hidden="true"></i>
-                                        </a>
-                                    </span>
-                                </button>
-                            </header>
-                        </div>
+                <div class="column is-6 is-offset-3">
+                    <div class="card">
+                        <header class="card-header">
+                            <p class="card-header-title">
+                               <a  href="./MiniProject/index.html" alt="quiz">
+                                پروژه
+                            </a> 
+                            </p>
+                            <button class="card-header-icon" aria-label="more options">
+                                <span class="icon is-medium">
+                                    <a class="button is-link" href="./MiniProject/index.html" alt="quiz">
+                                        <i class="fa fa-angle-left has-text-white" aria-hidden="true"></i>
+                                    </a>
+                                </span>
+                            </button>
+                        </header>
                     </div>
+                </div>
+                <div class="column is-6 is-offset-3">
+                    <div class="card">
+                        <header class="card-header">
+                            <p class="card-header-title">
+                               <a  href="./Question1/index.html" alt="quiz">
+                                جواب سوال اول
+                            </a> 
+                            </p>
+                            <button class="card-header-icon" aria-label="more options">
+                                <span class="icon is-medium">
+                                    <a class="button is-link" href="./Question1/index.html" alt="quiz">
+                                        <i class="fa fa-angle-left has-text-white" aria-hidden="true"></i>
+                                    </a>
+                                </span>
+                            </button>
+                        </header>
+                    </div>
+                </div>
                     <div class="column is-6 is-offset-3">
-
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
+                                   <a  href="./Question2/index.html" alt="quiz">
                                     جواب سوال دوم
+                                </a> 
                                 </p>
                                 <button class="card-header-icon" aria-label="more options">
                                     <span class="icon is-medium">
-                                        <a href="./Question2/index.html" alt="quiz">
-                                            <i class="fa fa-angle-left has-text-info" aria-hidden="true"></i>
+                                        <a class="button is-link" href="./Question2/index.html" alt="quiz">
+                                            <i class="fa fa-angle-left has-text-white" aria-hidden="true"></i>
                                         </a>
                                     </span>
                                 </button>
@@ -81,16 +96,17 @@
                         </div>
                     </div>
                     <div class="column is-6 is-offset-3">
-
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
+                                   <a  href="./Question3/index.html" alt="quiz">
                                     جواب سوال سوم
+                                </a> 
                                 </p>
                                 <button class="card-header-icon" aria-label="more options">
                                     <span class="icon is-medium">
-                                        <a href="./Question3/index.html" alt="quiz">
-                                            <i class="fa fa-angle-left has-text-info" aria-hidden="true"></i>
+                                        <a class="button is-link" href="./Question3/index.html" alt="quiz">
+                                            <i class="fa fa-angle-left has-text-white" aria-hidden="true"></i>
                                         </a>
                                     </span>
                                 </button>
@@ -98,16 +114,17 @@
                         </div>
                     </div>
                     <div class="column is-6 is-offset-3">
-
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
+                                   <a  href="./Question4/index.html" alt="quiz">
                                     جواب سوال چهارم
+                                </a> 
                                 </p>
                                 <button class="card-header-icon" aria-label="more options">
                                     <span class="icon is-medium">
-                                        <a href="./Question4/index.html" alt="quiz">
-                                            <i class="fa fa-angle-left has-text-info" aria-hidden="true"></i>
+                                        <a class="button is-link" href="./Question4/index.html" alt="quiz">
+                                            <i class="fa fa-angle-left has-text-white" aria-hidden="true"></i>
                                         </a>
                                     </span>
                                 </button>
@@ -115,33 +132,17 @@
                         </div>
                     </div>
                     <div class="column is-6 is-offset-3">
-
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
-                                    جواب سوال پنجم
+                                   <a  href="./Question5/index.html" alt="quiz">
+                                    جواب سوال پنجم 
+                                </a> 
                                 </p>
                                 <button class="card-header-icon" aria-label="more options">
                                     <span class="icon is-medium">
-                                        <a href="./Question5/index.html" alt="quiz">
-                                            <i class="fa fa-angle-left has-text-info" aria-hidden="true"></i>
-                                        </a>
-                                    </span>
-                                </button>
-                            </header>
-                        </div>
-                    </div>
-                    <div class="column is-6 is-offset-3">
-
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title">
-                                    پروژه
-                                </p>
-                                <button class="card-header-icon" aria-label="more options">
-                                    <span class="icon is-medium">
-                                        <a href="./MiniProject/index.html" alt="project">
-                                            <i class="fa fa-angle-left has-text-info" aria-hidden="true"></i>
+                                        <a class="button is-link" href="./Question5/index.html" alt="quiz">
+                                            <i class="fa fa-angle-left has-text-white" aria-hidden="true"></i>
                                         </a>
                                     </span>
                                 </button>
